--- a/roles/ansible-role-onedev/defaults/main.yml
+++ b/roles/ansible-role-onedev/defaults/main.yml
@@ -1,25 +1,161 @@
 ---
 
-# Onedev server script vars
-onedev_bin_server_app_name: "onedev"
-onedev_bin_server_app_long_name: "OneDev"
-onedev_bin_server_wrapper_cmd: "../boot/wrapper"
-onedev_bin_server_wrapper_conf: "../conf/wrapper.conf"
-onedev_bin_server_priority: ""
-onedev_bin_server_piddir: "."
-onedev_bin_server_pidfile_check_pid: "true"
-onedev_bin_server_wait_after_startup: "0"
-onedev_bin_server_wait_for_started_status: "true"
-onedev_bin_server_wait_for_started_timeout: "120"
-onedev_bin_server_detail_status: "true"
-onedev_bin_server_pausable: "true"
-onedev_bin_server_pausable_mode: "signals"
-onedev_bin_server_run_as_user: "root"
-onedev_bin_server_su_opts: "-s /bin/bash"
-onedev_bin_server_brief_usage: "true"
-onedev_bin_server_service_management_tool: "auto"
-onedev_bin_server_systemd_killmode: "control-group"
-onedev_bin_server_plist_domain: "org.tanukisoftware.wrapper"
-onedev_bin_server_macosx_keep_running: "false"
-onedev_bin_server_run_level: "20"
+# One dev files to source
 onedev_bin_server_files_to_source: ""
+
+# Application name and long name: If these variables are not set (or left to
+#  the default tokens), APP_NAME will default to the name of the script, then
+#  APP_LONG_NAME will default to the value of APP_NAME.
+onedev_bin_server_app_name: "onedev"
+
+# onedev_bin_server_app_long_name
+onedev_bin_server_app_long_name: "OneDev"
+
+# If uncommented (and set to false), APP_NAME and APP_LONG_NAME will no longer 
+#  be passed to the wrapper. See documentation for details.
+onedev_bin_server_app_name_pass_to_wrapper: "false"
+
+# Wrapper path
+onedev_bin_server_wrapper_cmd: "../boot/wrapper"
+
+# Wrapper conf path
+onedev_bin_server_wrapper_conf: "../conf/wrapper.conf"
+
+# Priority at which to run the wrapper.  See "man nice" for valid priorities.
+#  nice is only used if a priority is specified.
+onedev_bin_server_priority: ""
+
+# Location of the pid file.
+onedev_bin_server_piddir: "."
+
+# PIDFILE_CHECK_PID tells the script to double check whether the pid in the pid
+#  file actually exists and belongs to this application.  When not set, only
+#  check the pid, but not what it is.  This is only needed when multiple
+#  applications need to share the same pid file.
+onedev_bin_server_pidfile_check_pid: true
+
+# FIXED_COMMAND tells the script to use a hard coded action rather than
+#  expecting the first parameter of the command line to be the command.
+#  By default the command will be expected to be the first parameter.
+# PASS_THROUGH controls how the script arguments should be passed to the
+#  Wrapper. Possible values are:
+#  - commented or 'false': the arguments will be ignored (not passed).
+#  - 'app_args' or 'true': the arguments will be passed through the Wrapper as
+#                          arguments for the Java Application.
+#  - 'both': both Wrapper properties and Application arguments can be passed to
+#            the Wrapper. The Wrapper properties come in first position. The
+#            user can optionally add a '--' separator followed by application
+#            arguments.
+# NOTE - If FIXED_COMMAND is set to true the above applies to all arguments,
+#        otherwise it applies to arguments starting with the second.
+# NOTE - Passing arguments is only valid with the following commands:
+#          - 'console'
+#          - 'start', 'restart', 'condrestart' (if not installed as a daemon)
+#
+#
+# If uncommented, causes the Wrapper to be shutdown using an anchor file.
+#  When launched with the 'start' command, it will also ignore all INT and
+#  TERM signals.
+#IGNORE_SIGNALS=true
+#
+# Wrapper will start the JVM asynchronously. Your application may have some
+#  initialization tasks and it may be desirable to wait a few seconds
+#  before returning.  For example, to delay the invocation of following
+#  startup scripts.  Setting WAIT_AFTER_STARTUP to a positive number will
+#  cause the start command to delay for the indicated period of time 
+#  (in seconds).
+onedev_bin_server_wait_after_startup: "0"
+
+# If set, wait for the wrapper to report that the daemon has started
+onedev_bin_server_detail_status: "true"
+
+# to replace
+onedev_bin_server_pausable: "true"
+
+# If set, the status, start_msg and stop_msg commands will print out detailed
+#   state information on the Wrapper and Java processes.
+onedev_bin_server_detail_status: "true"
+
+# If set, the 'pause' and 'resume' commands will be enabled.  These make it
+#  possible to pause the JVM or Java application without completely stopping
+#  the Wrapper.  See the wrapper.pausable and wrapper.pausable.stop_jvm
+#  properties for more information.
+onedev_bin_server_pausable: "true"
+
+# Set the mode used to 'pause' or 'resume' the Wrapper. Possible values are
+#  'signals' which uses SIGUSR1 and SIGUSR2, and 'file' which uses the command
+#  file to communicate these actions.  The default value is 'signals'.
+#  Be aware that depending on the mode, the properties wrapper.signal.mode.usr1,
+#  wrapper.signal.mode.usr2, or wrapper.commandfile of the configuration file may
+#  be overriden.
+onedev_bin_server_pausable_mode: "signals"
+
+# If set, the Wrapper will be run as the specified user.
+# IMPORTANT - Make sure that the user has the required privileges to write
+#  the PID file and wrapper.log files.  Failure to be able to write the log
+#  file will cause the Wrapper to exit without any way to write out an error
+#  message.
+# NOTES - This will set the user which is used to run the Wrapper as well as
+#  the JVM and is not useful in situations where a privileged resource or
+#  port needs to be allocated prior to the user being changed.
+#       - Setting this variable will cause stdin to be closed. While this
+#  should not be a problem when running as Daemon, it would disable ability
+#  for console applications to receive inputs.
+onedev_bin_server_run_as_user: "root"
+
+# When RUN_AS_USER is set, the 'runuser' command will be used to substitute the
+#  user. If not present on the machine, 'su' will be used as a fallback.
+#  The parameter below lets you specify option(s) for the 'runuser' (or 'su')
+#  command.
+# NOTES - The '-u' option is not allowed. Please set the user with RUN_AS_USER.
+#       - On GNU/Linux systems, if the user specified by RUN_AS_USER doesn't
+#  have a default shell please specify one with the '-s' option.
+onedev_bin_server_su_opts: "-s /bin/bash"
+
+# By default we show a detailed usage block.  Uncomment to show brief usage.
+onedev_bin_server_brief_usage: "true"
+
+# Set which service management tool to use.
+# Possible values are: 
+#   for linux...: auto, systemd, upstart, initd
+#   for aix.....: auto, src, initd
+# When set to 'auto', this script file will try to detect in the order of the 
+# list for each platform which service management tool to use to install the Wrapper.
+onedev_bin_server_service_management_tool: "auto"
+
+# Specify how the Wrapper daemon and its child processes should be killed
+#  when using systemd.
+#  The default is 'control-group' which tells systemd to kill all child
+#  processes (including detached ones) in the control group of the daemon
+#  when it stops.
+#  Alternatively, 'process' can be specified to prevent systemd from
+#  killing the child processes leaving this responsibility to the Wrapper.
+#  In this case child processes marked as 'detached' will not be killed on shutdown.
+# NOTE - the daemon must be reinstalled for any changes on this property to take effect.
+onedev_bin_server_systemd_killmode: "control-group"
+
+# When installing on Mac OSX platforms, the following domain will be used to
+#  prefix the plist file name.
+onedev_bin_server_plist_domain: "org.tanukisoftware.wrapper"
+
+# When installing on Mac OSX platforms, this parameter controls whether the daemon
+#  is to be kept continuously running or to let demand and conditions control the 
+#  invocation.
+onedev_bin_server_macosx_keep_running: "false"
+
+# The following two lines are used by the chkconfig command. Change as is
+#  appropriate for your application.  They should remain commented.
+# chkconfig: 2345 20 80
+# description: OneDev
+#
+# Set run level to use when installing the application to start and stop on
+#  system startup and shutdown.  It is important that the application always
+#  be uninstalled before making any changes to the run levels.
+# It is also possible to specify different run levels based on the individual
+#  platform.  When doing so this script will look for defined run levels in
+#  the following order:
+#   1) "RUN_LEVEL_S_$DIST_OS" or "RUN_LEVEL_K_$DIST_OS", where "$DIST_OS" is
+#      the value of DIST_OS.  "RUN_LEVEL_S_solaris=20" for example.
+#   2) RUN_LEVEL_S or RUN_LEVEL_K, to specify specify start or stop run levels.
+#   3) RUN_LEVEL, to specify a general run level.
+onedev_bin_server_run_level: "20"
