--- a/roles/ansible-role-onedev/tasks/main.yml
+++ b/roles/ansible-role-onedev/tasks/main.yml
@@ -13,28 +13,40 @@
     - default-jdk
     - git
 
-- name: Ensure onedev-7.7.11 not already exists
+- name: Ensure onedev installation dir
+  file:
+    path: "{{ onedev_destination_directory }}"
+    state: directory
+
+- name: Ensure onedev installation not already exists
   stat:
-    path: "/tmp/onedev-7.7.11"
+    path: "{{ onedev_installation_directory }}"
   register: onedev_directory_exist
 
 - name: Unarchive a file that needs to be downloaded
   ansible.builtin.unarchive:
-    src: https://code.onedev.io/downloads/projects/160/builds/3112/artifacts/onedev-7.7.11.zip
-    dest: /tmp
+    src: "{{ onedev_package_url }}"
+    dest: "{{ onedev_destination_directory }}"
+    creates: "{{ onedev_installation_directory }}"
     remote_src: yes
   when: not onedev_directory_exist.stat.exists
 
-- name: Set /bin/server.sh variables
+- name: Load one dev configuration variables into temporary file
+  template:
+    src: "sh_server_vars.j2"
+    dest: "{{ onedev_installation_directory }}/onedev_vars"
+    mode: 750
+
+- name: Set server.sh variables
   ansible.builtin.lineinfile:
-    path: /tmp/onedev-7.7.11/bin/server.sh
+    path: "{{ onedev_installation_directory }}/bin/server.sh"
     regexp: '{{ item.regexp }}'
     line: '{{ item.line }}'
     mode: '755'
   loop:
-    - { regexp: '^FILES_TO_SOURCE=', line: 'FILES_TO_SOURCE="{{ onedev_bin_server_files_to_source }}"' }
+    - { regexp: '^FILES_TO_SOURCE=', line: 'FILES_TO_SOURCE="{{ onedev_installation_directory }}/onedev_vars"' }
 
 - name: Install & Start onedev service
   command: ./server.sh installstart
   args:
-    chdir: /tmp/onedev-7.7.11/bin
+    chdir: "{{ onedev_installation_directory }}/bin"
