--- a/tests/vbox/tests.yml
+++ b/tests/vbox/tests.yml
@@ -1,4 +1,4 @@
-- name: Tests ansible role execution
+- name: Test onedev baremetal role execution
   hosts: vbox
   become: true
   gather_facts: true
