--- a/.envrc
+++ b/.envrc
@@ -33,7 +33,7 @@ export ANSIBLE_COLLECTIONS_PATH="${DIRENV_TMP_DIR}"
 # Tests configuration
 # ===================
 #
-export TEST_VIRTUALBOX_DIRECTORY="${PWD}/tests/virtualbox"
+export TEST_VBOX_DIRECTORY="${PWD}/tests/virtualbox"
 
 # Environment addons sourcing
 # ===========================
