--- a/roles/ansible-role-onedev/defaults/main.yml
+++ b/roles/ansible-role-onedev/defaults/main.yml
@@ -22,13 +22,8 @@ onedev_destination_directory: "/tmp"
 # Onedev unarchive installation directory
 onedev_installation_directory: "{{ onedev_destination_directory }}/onedev-{{ onedev_version }}"
 
-# Application name and long name: If these variables are not set (or left to
-#  the default tokens), APP_NAME will default to the name of the script, then
-#  APP_LONG_NAME will default to the value of APP_NAME.
-onedev_bin_server_app_name: "onedev"
-
 # onedev_bin_server_app_long_name
-onedev_bin_server_app_long_name: "OneDev"
+onedev_bin_server_app_long_name: "OneDev42"
 
 # If uncommented (and set to false), APP_NAME and APP_LONG_NAME will no longer 
 #  be passed to the wrapper. See documentation for details.
