--- a/requirements.yml
+++ b/requirements.yml
@@ -1,3 +1,9 @@
 ---
 collections:
   - name: community.general
+  - name: community.mysql
+  
+roles:
+  - src: https://github.com/fauust/ansible-role-mariadb.git
+    version: 3.0.2
+    name: ansible-role-mariadb
