--- a/roles/ansible-role-onedev/meta/main.yml
+++ b/roles/ansible-role-onedev/meta/main.yml
@@ -6,10 +6,10 @@ galaxy_info:
   description: ansible role onedev for barmetal installation
   company: "myself"
   license: "license (MIT)"
-  min_ansible_version: 2.4
+  min_ansible_version: "2.4"
   platforms:
     - name: Debian
-      versions:
+      versions: 
         - 11
   galaxy_tags:
     - system
