--- a/tests/virtualbox/tests.yml
+++ b/tests/virtualbox/tests.yml
@@ -1,5 +1,13 @@
 #!/usr/bin/env ansible-playbook
 ---
+- hosts: basenode1
+  gather_facts: yes
+  become: yes
+  tags:
+    - always
+  roles:
+    - ansible-role-mariadb
+
 - hosts: basenode
   gather_facts: yes
   become: yes
